--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+# Ignore node_modules directories
+node_modules/
+frontend/node_modules/
+
+# Ignore other files and directories
 *.out
 *.vscode
-*/*.out
 */obj
-frontend/node_modules/*
-frontend/node_modules/.*
