--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,8 +17,9 @@
     "serve": "^14.2.4",
     "vite-plugin-env-compatible": "^2.0.1",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.0.1",
     "vue-router": "^4.4.5",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
