--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # Ignore node_modules directories
 node_modules/
-frontend/node_modules/
+front-end/node_modules/
 
 # Ignore other files and directories
 *.out
 *.vscode
 */*.out
 */obj
-frontend/node_modules/*
-frontend/node_modules/.*
-frontend/package-lock.json
+
+front-end/node_modules/.*
+front-end/package-lock.json
 
 # Ignore compiled files
 back-end/bin/*
