--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,12 +15,14 @@
     "chart.js": "^4.4.7",
     "gsap": "^3.12.5",
     "i18n": "^0.15.1",
-    "package-lock": "^1.0.5",
+    "package-lock": "^1.0.3",
     "serve": "^14.2.4",
     "vite-plugin-env-compatible": "^2.0.1",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
+    "vue-class-component": "^8.0.0-rc.1",
     "vue-i18n": "^11.0.1",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.4.5",
     "vuex": "^4.0.2"
   },
