--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "gsap": "^3.12.5",
     "i18n": "^0.15.1",
     "package-lock": "^1.0.3",
