--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ GAMESERVICE_EMAIL=game@serv.fr
 HASHER_CODE=django-insecure-f+&g!!lmxdld%5v!2&#q5oowy)p64m0pdys47ju9*g40r(z&kq
 #HOSTNAME=c1r6p9.42lehavre.fr
 HOSTNAME=localhost
+#HOSTNAME=c1r6p8.42lehavre.fr
 PORT=1443
 LCL_HOSTNAME=localhost
 API_KEY=36397bb73eefgfdgesad4324
