--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "i18n": "^0.15.1",
     "package-lock": "^1.0.3",
     "serve": "^14.2.4",
+    "socket.io-client": "^4.8.1",
     "vite-plugin-env-compatible": "^2.0.1",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
