feat Production mode (#25)
* save Sun Feb 16 04:57:49 PM CET 2025

* save Sun Feb 16 06:09:51 PM CET 2025

* save Sun Feb 16 09:05:20 PM CET 2025

* save Mon 17 Feb 2025 11:20:17 AM CET

* save Mon Feb 17 01:47:59 PM CET 2025

* save Mon Feb 17 02:26:21 PM CET 2025

* save Mon Feb 17 02:48:09 PM CET 2025

* save Mon Feb 17 02:50:26 PM CET 2025

* save Mon Feb 17 02:55:46 PM CET 2025

---------

Co-authored-by: Georg Nikolaus Kubina <gkubina@c1r6p9.42lehavre.fr>
Co-authored-by: Georg Home <gkubina@student.lehavre.fr>

--- a/.env
+++ b/.env
@@ -12,10 +12,15 @@ DJANGO_SUPERUSER_PASSWORD=admin
 #GAMESERVICE_PASSWORD=gameservicepw123
 #GAMESERVICE_EMAIL=game@serv.fr
 HASHER_CODE=django-insecure-f+&g!!lmxdld%5v!2&#q5oowy)p64m0pdys47ju9*g40r(z&kq
-#HOSTNAME=c1r6p9.42lehavre.fr
-HOSTNAME=localhost
+HOSTNAME=c1r6p9.42lehavre.fr
+#HOSTNAME=localhost
 #HOSTNAME=c1r6p8.42lehavre.fr
 PORT=1443
 #LCL_HOSTNAME=localhost
 API_KEY=36397bb73eefgfdgesad4324
 OTP_ENC_KEY=QtJB1xcX8GvEgqNQbjZ4Uby9HYYlOo5zu_-dcpqMoyg=
+GF_SECURITY_ADMIN_PASSWORD=grafana
+GF_SERVER_ROOT_URL=https://localhost:1443/grafana/
+GF_SERVER_SERVE_FROM_SUB_PATH=true
+GF_LOG_LEVEL=info
+DEBUGMODE=True
