--- a/webserver/Dockerfile_dev
+++ b/webserver/Dockerfile_dev
@@ -21,7 +21,7 @@ RUN mkdir -p /usr/share/nginx/mediafiles
 RUN chown -R www-data:www-data /usr/share/nginx/mediafiles
 RUN chmod -R 755 /usr/share/nginx/mediafiles
 
-COPY webserver/nginx-dev.conf /etc/nginx/nginx.conf
+COPY webserver/nginx.conf /etc/nginx/nginx.conf
 
 COPY webserver/favicon.ico /usr/share/nginx/favicon.ico
 
