--- a/webserver/nginx-prod.conf
+++ b/webserver/nginx-prod.conf
@@ -16,10 +16,10 @@ events {
 
 http {
 
-        log_format websocket '$remote_addr - $remote_user [$time_local] '
-                     '"$request" $status $body_bytes_sent '
-                     '"$http_referer" "$http_user_agent" '
-                     '"Connection: $http_connection" "Upgrade: $http_upgrade"';
+        # log_format websocket '$remote_addr - $remote_user [$time_local] '
+        #              '"$request" $status $body_bytes_sent '
+        #              '"$http_referer" "$http_user_agent" '
+        #              '"Connection: $http_connection" "Upgrade: $http_upgrade"';
 
         ##
         # Basic Settings
@@ -72,6 +72,17 @@ http {
 #}
 
 
+server {
+    listen 8080;
+    server_name nginx;
+
+    location /status {
+        stub_status on;        
+        allow all;
+    }
+}
+
+
 
 
 server {
@@ -96,9 +107,7 @@ server {
         # Errorpages
         ##
 
-  #      location / { # handle requests to the root of the server
-   #             try_files $uri /index.html;     # try to find the requested file in the root directory
-    #    }
+
 
         location = /favicon.ico {
                 alias /usr/share/nginx/favicon.ico;
@@ -107,17 +116,48 @@ server {
                 expires max;
         }
 
-        location / { 
+        location /grafana { 
 
-                proxy_pass http://front-end:5173; # send requests to the api container
+                proxy_pass http://grafana:3000/grafana; # send requests to the api container
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection 'upgrade';
-             #   proxy_set_header Host $host;
-                proxy_set_header Host localhost; # for testing
-                proxy_cache_bypass $http_upgrade;                
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;                
         }
 
+        # location /prometheus {   
+        #         auth_basic "Restricted Access";
+        #         auth_basic_user_file /etc/nginx/.htpasswd;           
+        #         proxy_pass http://prometheus:9090; # send requests to the api container
+        #         proxy_http_version 1.1;
+        #         proxy_set_header Upgrade $http_upgrade;
+        #         proxy_set_header Connection 'upgrade';
+        #         proxy_set_header Host $host;
+        #         proxy_cache_bypass $http_upgrade;                
+        #         proxy_set_header X-Real-IP $remote_addr;
+        #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #         proxy_set_header X-Forwarded-Proto $scheme;                
+
+        # }
+
+        # location / { 
+
+        #         proxy_pass http://front-end:5173; # send requests to the api container
+        #         proxy_http_version 1.1;
+        #         proxy_set_header Upgrade $http_upgrade;
+        #         proxy_set_header Connection 'upgrade';
+        #      #   proxy_set_header Host $host;
+        #         proxy_set_header Host localhost; # for testing
+        #         proxy_cache_bypass $http_upgrade;                
+        # }
+
+        location / { # handle requests to the root of the server
+                try_files $uri /index.html;     # try to find the requested file in the root directory
+        }
 
         # location /gamefront { 
 
@@ -140,6 +180,8 @@ server {
                 proxy_cache_bypass $http_upgrade;                
         }
 
+
+
         location /ws { 
 
                 proxy_pass http://game-logic:8001; # send requests to the api container
@@ -153,8 +195,8 @@ server {
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
 
-                access_log /dev/stdout websocket;
-                error_log /dev/stderr warn;
+                #access_log /dev/stdout websocket;
+                #error_log /dev/stderr warn;
 
         }
 
