colision bords fixer

--- a/.env
+++ b/.env
@@ -20,4 +20,4 @@ GF_SECURITY_ADMIN_PASSWORD=grafana
 GF_SERVER_ROOT_URL=https://$HOSTNAME:$PORT/grafana/
 GF_SERVER_SERVE_FROM_SUB_PATH=true
 GF_LOG_LEVEL=info
-DEBUGMODE=True
+DEBUGMODE=False
