--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,13 +89,13 @@ services:
     restart: always
     networks:
       - pong
-    # healthcheck:
-    #   test: ["CMD-SHELL", "curl -f http://localhost:8001/ || exit 1"]
-    #   interval: 10s
-    #   timeout: 10s
-    #   retries: 3
-    #   start_period: 10s
-    command: ["python", "manage.py", "runserver", "0.0.0.0:8001"] # change to daphne or gunicorn in production ???
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8001/admin || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    # command: ["python", "manage.py", "runserver", "0.0.0.0:8001"] # change to daphne or gunicorn in production ???
 
 
 
